methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:8: error: not found: value isfacingTrail
    else if (!isfacingTrail()) {
              ^